@@ -14,8 +14,8 @@
     <url>https://github.com/swiyu-admin-ch/didtoolbox-java</url>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
         <project.main.class>ch.admin.bj.swiyu.didtoolbox.Main</project.main.class>
         <!--project.dependencies.directory>lib/</project.dependencies.directory-->
@@ -27,6 +27,15 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <!-- Equiv. to JAVA_TOOL_OPTIONS=-enable-preview mvn ... -->
+                    <!-- See also https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access -->
+                    <argLine>
+                        --enable-preview
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -44,8 +53,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <!-- CAUTION preview language features are only supported for release 23 -->
+                    <!--enablePreview>true</enablePreview-->
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -99,6 +110,7 @@
                         </goals>
                         <configuration>
                             <archive>
+                                <!-- See https://maven.apache.org/shared/maven-archiver/index.html#class_manifest -->
                                 <manifest>
                                     <mainClass>${project.main.class}</mainClass>
                                     <addDefaultEntries>true</addDefaultEntries>
@@ -106,6 +118,15 @@
                                     <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                     <addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
                                 </manifest>
+                                <!-- See https://maven.apache.org/shared/maven-archiver/index.html#class_manifestSection -->
+                                <manifestEntries>
+                                    <!--
+                                    Ensure the Securosys Primus libs are available for a Class.forName() reflection call.
+                                    CAUTION (according to https://docs.oracle.com/javase/8/docs/technotes/tools/windows/classpath.html#A1100762):
+                                            "... class path wild cards are not honored in the Class-Path jar-manifest header."
+                                    -->
+                                    <Class-Path>lib/primusX-java8.jar lib/primusX-java11.jar</Class-Path>
+                                </manifestEntries>
                             </archive>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -279,6 +300,19 @@
             <artifactId>bcprov-ext-jdk15on</artifactId>
             <version>1.70</version>
         </dependency-->
+        <!-- Securosys Primus HSM (JCE security provider) -->
+        <dependency>
+            <!-- https://nexus.bit.admin.ch/#browse/browse:bit-pki-raw-hosted:securosys%2Fjce-provider -->
+            <groupId>com.securosys.primus</groupId>
+            <artifactId>jce</artifactId>
+            <version>2.4.4</version>
+            <!-- CAUTION using local Maven repo instead, so it becomes integral part of the "fat" jar
+            mvn install:install-file -Dfile=lib/primusX-java11.jar -DgroupId=com.securosys.primus -DartifactId=jce -Dversion=2.4.4 -Dpackaging=jar -DlocalRepositoryPath=$HOME/.m2/repository
+            -->
+            <!-- CAUTION Otherwise, to prevent ending up in the "fat" JAR (didtoolbox-x.y.z-jar-with-dependencies.jar) -->
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/securosys/primus/jce/2.4.4/jce-2.4.4.jar</systemPath>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -320,6 +354,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>2.3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
